src/assets/scss/utils/utils.scss
.pages-wrapper {
  position: relative;
}

.pages {
  background-image: url("../images/white-lightblue-bg.jpeg");
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  margin-top: 88px;
  position: absolute;
  width: 100%;
  z-index: 3;
  min-height: 100vh;
  > :after {
    position: absolute;
    content: "";
    bottom: -298px;
    height: 40px;
    width: 1px;
  }
}

a {
  text-decoration: none !important;
}

.text-color-blue {
  color: $medium-blue;
}

.text-color-light-blue {
  color: $light-blue;
}

.text-color-yellow {
  color: $yellow;
}

@media (max-width: 991px) {
  .pages {
    :after {
      bottom: -371px;
    }
  }
}

@media (max-width: 767px) {
  .pages {
    :after {
      bottom: -579.5px;
    }
  }
}

@media (max-width: 367px) {
  .pages {
    :after {
      bottom: -646.5px;
    }
  }
}

